--- a/app/src/main/res/layout/activity_select_user.xml
+++ b/app/src/main/res/layout/activity_select_user.xml
@@ -3,24 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/intro_bg"
-    tools:context=".Activities.SelectUserActivity">
-
-    <RelativeLayout
-        android:id="@+id/Progress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.8"
-        android:background="@android:color/white"
-        android:visibility="gone">
-
-        <ProgressBar
-            style="@style/MyProgressBarRectangle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
-    </RelativeLayout>
-
+    tools:context=".Activities.Splash">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -40,11 +23,12 @@
                 android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_gravity="right"
                 android:layout_marginEnd="90dp"
+                android:layout_marginRight="90dp"
                 android:src="@drawable/background_circle"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="90dp" />
+                android:visibility="gone" />
         </RelativeLayout>
 
         <LinearLayout
@@ -59,22 +43,6 @@
                 android:src="@drawable/main_logo" />
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:text="Ordering and Delivering App"
-                android:textColor="#6ea350"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,53 +51,9 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="I am"
-                android:textColor="#fff"
-                android:textSize="20dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="70dp"
-                android:layout_marginRight="70dp"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/Customer"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/customer_button" />
-
-                <TextView
-                    android:id="@+id/Owner"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginRight="12dp"
-                    android:background="@drawable/button_bg"
-                    android:gravity="center"
-                    android:text="Owner"
-                    android:textColor="#fff"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4.3"
-            android:background="@drawable/background4">
 
         </LinearLayout>
 
     </LinearLayout>
-
 
 </RelativeLayout>
