--- a/app/src/main/res/layout/fragment_chat_.xml
+++ b/app/src/main/res/layout/fragment_chat_.xml
@@ -137,7 +137,7 @@
                 android:layout_marginLeft="@dimen/_70sdp"
                 android:layout_marginRight="@dimen/_70sdp"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:layout_weight="2.3"
+                android:layout_weight="2"
                 android:visibility="gone">
 
                 <LinearLayout
@@ -202,15 +202,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="center"
-            android:padding="@dimen/_5sdp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="@dimen/_5sdp">
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:padding="@dimen/_5sdp"
+                android:padding="@dimen/_7sdp"
                 android:src="@drawable/plusiconofchat" />
 
 
@@ -236,7 +236,7 @@
                 android:background="@android:color/transparent"
                 android:text="send"
                 android:textAllCaps="false"
-                android:textColor="#d1d1f6" />
+                android:textColor="#d1d1e8" />
         </LinearLayout>
 
 
