--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/Click"
     android:layout_width="match_parent"
+    android:layout_margin="5dp"
     android:layout_height="match_parent"
     android:gravity="center">
 
@@ -14,18 +15,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/_2sdp">
+            android:orientation="vertical">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="2dp"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_5sdp"
+                app:cardElevation="@dimen/_1sdp"
                 app:cardCornerRadius="8dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="160dp">
 
                     <ImageView
                         android:id="@+id/StoreImage"
@@ -35,6 +41,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
                         android:src="@drawable/images" />
 
                     <TextView
@@ -68,10 +75,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
                     android:maxLines="1"
                     android:maxWidth="@dimen/_130sdp"
-                    android:paddingLeft="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_7sdp"
                     android:text="Levi's Outlet Store"
                     android:textColor="#464646"
                     android:textSize="16dp"
@@ -85,7 +91,9 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/layoout_shape_gradient"
                 android:orientation="horizontal"
-                android:padding="7dp">
+                android:padding="3dp"
+                android:paddingLeft="@dimen/_7sdp"
+                android:paddingRight="@dimen/_7sdp">
 
                 <TextView
                     android:layout_width="wrap_content"
