--- a/app/src/main/res/drawable/send_message_background.xml
+++ b/app/src/main/res/drawable/send_message_background.xml
@@ -7,7 +7,7 @@
             <corners android:radius="30dp" />
             <gradient
                 android:startColor="#e8e8e8"
-                android:endColor="#ffffff"
+                android:endColor="#e8e8e8"
                 android:angle="-270" />
         </shape>
     </item>
