--- a/app/src/main/res/drawable/textview_gradient.xml
+++ b/app/src/main/res/drawable/textview_gradient.xml
@@ -3,9 +3,9 @@
     <gradient
         android:angle="45"
         android:centerX="100%"
-        android:centerColor="#ff979ca1"
-        android:startColor="#ff979ca1"
-        android:endColor="#ff979ca1"
+        android:centerColor="#d3d3d3 "
+        android:startColor="#d3d3d3 "
+        android:endColor="#d3d3d3 "
         android:type="linear"
         />
 </shape>
