--- a/app/src/main/res/layout/dialog_update_location.xml
+++ b/app/src/main/res/layout/dialog_update_location.xml
@@ -25,7 +25,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="center|left"
             android:padding="@dimen/_5sdp">
 
             <ImageView
