--- a/app/src/main/res/layout/fragment_chat_.xml
+++ b/app/src/main/res/layout/fragment_chat_.xml
@@ -60,21 +60,23 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/Order"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="50dp"
                     android:gravity="center"
-                    android:text="Order no. 2"
+                    android:text=""
                     android:textColor="@android:color/black"
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/LocationStatus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="50dp"
                     android:gravity="center"
-                    android:text="0.5 Miles Away"
+                    android:text="Messages"
                     android:textColor="#fff"
                     android:textSize="19sp"
                     android:textStyle="bold" />
@@ -102,11 +104,31 @@
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
+        android:id="@+id/NoMessageLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="#FFFFFF"
         android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="No Message!"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/_20sdp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ChatLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#FFFFFF"
+        android:orientation="vertical"
+        android:visibility="gone">
 
 
         <LinearLayout
@@ -189,59 +211,59 @@
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
 
-
-        <!--<android.support.v7.widget.CardView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:windowSoftInputMode="adjustPan|adjustResize"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom"-->
-        <!--android:minHeight="?attr/actionBarSize">-->
-
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="@dimen/_5sdp">
+            android:minHeight="?attr/actionBarSize"
+            android:windowSoftInputMode="adjustPan|adjustResize"
+            app:cardPreventCornerOverlap="true">
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:padding="@dimen/_7sdp"
-                android:src="@drawable/plusiconofchat" />
-
-
-            <EditText
-                android:id="@+id/edtMessage"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="4"
-                android:background="@drawable/send_message_background"
-                android:elevation="5dp"
-                android:lines="1"
-                android:padding="@dimen/_5sdp"
-                android:scaleType="centerCrop"
-                android:textColor="#000000"
-                android:textSize="20sp" />
+                android:layout_gravity="bottom"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="@dimen/_5sdp">
 
-            <Button
-                android:id="@+id/btnSendMessage"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@android:color/transparent"
-                android:text="send"
-                android:textAllCaps="false"
-                android:textColor="#d1d1e8" />
-        </LinearLayout>
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="0.8"
+                    android:padding="@dimen/_10sdp"
+                    android:src="@drawable/plusiconofchat" />
 
 
-        <!--</android.support.v7.widget.CardView>-->
+                <EditText
+                    android:id="@+id/edtMessage"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="4"
+                    android:background="@drawable/send_message_background"
+                    android:elevation="1dp"
+                    android:lines="1"
+                    android:padding="@dimen/_5sdp"
+                    android:scaleType="centerCrop"
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
 
+                <Button
+                    android:id="@+id/btnSendMessage"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:text="send"
+                    android:textAllCaps="false"
+                    android:textColor="#d1d1e8" />
+            </LinearLayout>
+
+
+        </android.support.v7.widget.CardView>
+        <!---->
     </LinearLayout>
 
 
