--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -76,8 +76,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:gravity="center"
             android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="vertical">
 
             <LinearLayout
@@ -107,6 +107,8 @@
                     android:id="@+id/DetectAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center|left"
+                    android:lines="2"
                     android:text="Location, Location, Location"
                     android:textSize="20dp"
                     android:textStyle="bold" />
@@ -115,10 +117,10 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_3sdp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:orientation="vertical"
-                android:padding="@dimen/_5sdp"
                 android:textStyle="bold">
 
                 <TextView
@@ -138,14 +140,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
                 android:layout_marginTop="5dp"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="200dp" />
             </LinearLayout>
 
             <ImageView
@@ -158,6 +162,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
                 android:layout_marginTop="10dp">
 
                 <LinearLayout
