--- a/app/src/main/res/layout/fragment_my_orders.xml
+++ b/app/src/main/res/layout/fragment_my_orders.xml
@@ -39,29 +39,31 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <ImageView
                         android:id="@+id/Back"
                         android:layout_width="50dp"
                         android:layout_height="30dp"
                         android:src="@drawable/back_icon" />
+
                     <ImageView
                         android:layout_width="50dp"
-                        android:visibility="invisible"
                         android:layout_height="20dp"
-                        android:src="@drawable/back_icon" />
+                        android:src="@drawable/back_icon"
+                        android:visibility="invisible" />
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="50dp"
                     android:gravity="center"
                     android:text="My Orders"
                     android:textColor="#fff"
                     android:textSize="19sp"
                     android:textStyle="bold" />
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
