--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="10dp"
     android:orientation="horizontal"
     android:weightSum="3">
@@ -9,7 +10,7 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="0dp"
+        card_view:cardCornerRadius="5p"
         card_view:cardElevation="7dp">
 
 
@@ -95,8 +96,10 @@
 
             <ImageView
                 android:id="@+id/Image"
+                android:padding="@dimen/_5sdp"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
+
                 android:src="@drawable/pepsi" />
         </LinearLayout>
 
