--- a/app/src/main/res/layout/item_location_string.xml
+++ b/app/src/main/res/layout/item_location_string.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
+    android:background="@android:color/white"
+    android:textColor="@android:color/black"
     android:maxLines="2"
     android:padding="7dp">
 
