--- a/app/src/main/res/layout/item_my_order.xml
+++ b/app/src/main/res/layout/item_my_order.xml
@@ -33,7 +33,7 @@
                     android:src="@drawable/store_icon_cart" />
 
                 <TextView
-                    android:id="@+id/name"
+                    android:id="@+id/OrderName"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
@@ -58,6 +58,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/TotalPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
@@ -73,12 +74,13 @@
             android:layout_marginBottom="15dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="25dp"
-            android:layout_weight="2.5">
+            android:layout_weight="2">
 
             <TextView
+                android:id="@+id/Date"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:gravity="end|center"
                 android:text="12/12/2018"
                 android:textColor="#90b983"
@@ -88,7 +90,7 @@
                 android:id="@+id/Open"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/order_plus" />
         </LinearLayout>
