--- a/app/src/main/res/layout/item_order_dialog.xml
+++ b/app/src/main/res/layout/item_order_dialog.xml
@@ -10,6 +10,7 @@
     android:weightSum="3">
 
     <TextView
+        android:id="@+id/Date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -19,6 +20,7 @@
         android:textColor="@color/green" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -44,7 +46,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/childItem"
+            android:id="@+id/TotalPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
