--- a/app/src/main/res/layout/item_order_group.xml
+++ b/app/src/main/res/layout/item_order_group.xml
@@ -28,6 +28,7 @@
 
 
                 <TextView
+                    android:id="@+id/StoreName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
