--- a/app/src/main/res/layout/item_product_item.xml
+++ b/app/src/main/res/layout/item_product_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/Click"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -47,6 +46,7 @@
                             android:adjustViewBounds="true"
                             android:background="@drawable/rounded"
                             android:scaleType="centerCrop"
+                            android:padding="5dp"
                             android:src="@drawable/pepsi_2" />
 
 
@@ -66,8 +66,9 @@
                                 android:gravity="end"
                                 android:paddingLeft="@dimen/_4sdp"
                                 android:paddingRight="@dimen/_4sdp"
+                                android:alpha="0.8"
                                 android:text="200SAR"
-                                android:textColor="#fff"
+                                android:textColor="#FFFFFF"
                                 android:textStyle="bold" />
 
                         </LinearLayout>
