--- a/app/src/main/res/layout/activity_customer__signup.xml
+++ b/app/src/main/res/layout/activity_customer__signup.xml
@@ -19,7 +19,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.3">
+                android:layout_weight="0.5">
 
                 <TextView
                     android:id="@+id/textView"
@@ -57,7 +57,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="3.3"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
@@ -71,13 +71,13 @@
                 android:layout_height="0dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:layout_weight="13"
-                android:gravity="center"
+                android:layout_weight="2"
+                android:gravity="center|top"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <android.support.design.widget.TextInputLayout
@@ -91,6 +91,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:backgroundTint="#fff"
+                            android:text="jimi"
                             android:ems="10"
                             android:hint="Name"
                             android:inputType="textPersonName"
@@ -109,6 +110,7 @@
                             android:layout_height="wrap_content"
                             android:backgroundTint="#fff"
                             android:hint="Phone"
+                            android:text="03336999664"
                             android:inputType="phone"
                             android:textColor="#fff"
                             android:textColorHint="#fff" />
@@ -126,6 +128,7 @@
                             android:backgroundTint="#fff"
                             android:ems="10"
                             android:hint="Email"
+                            android:text="abc@gmail.com"
                             android:inputType="textEmailAddress"
                             android:textColor="#fff"
                             android:textColorHint="#fff" />
@@ -144,6 +147,7 @@
                             android:backgroundTint="#fff"
                             android:hint="Password"
                             android:inputType="textPassword"
+                            android:text="one121212"
                             android:textColor="#fff"
                             android:textColorHint="#fff" />
                     </android.support.design.widget.TextInputLayout>
@@ -227,7 +231,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2.3"
+                android:layout_weight="0.5"
                 android:background="@drawable/background4"
                 tools:ignore="Suspicious0dp">
 
