--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -78,12 +78,51 @@
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
-
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
     </LinearLayout>
 
+
+    <LinearLayout
+        android:id="@+id/NoCartLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/layout"
+        android:background="#f2f2f2"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:src="@drawable/noitem"
+            android:text="No item in Cart!"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/_20sdp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="There is no item in Cart"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/_18sdp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingLeft="@dimen/_15sdp"
+            android:paddingRight="@dimen/_15sdp"
+            android:text="Please shop some products \n then come to cart"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/_14sdp" />
+
+    </LinearLayout>
 
     <ExpandableListView
         android:id="@+id/simpleExpandableListView"
@@ -95,7 +134,8 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:animateLayoutChanges="true"
-        android:groupIndicator="@null" />
+        android:groupIndicator="@null"
+        android:visibility="gone" />
 
 
     <ImageView
