--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -94,7 +94,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="10dp"
                     android:gravity="center"
                     android:hint="Name:"
                     android:textColorHint="#6e6262"
@@ -105,6 +105,7 @@
                     android:id="@+id/Name"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:lines="1"
                     android:layout_marginLeft="10dp"
                     android:gravity="center"
                     android:hint="MR. Pasha"
@@ -140,7 +141,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="10dp"
                     android:gravity="center"
                     android:hint="Phone:"
                     android:textColorHint="#6e6262"
@@ -152,6 +153,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:gravity="center"
+                    android:lines="1"
                     android:hint="03366645735"
                     android:textColorHint="#6e6262"
                     android:textSize="20dp" />
@@ -174,7 +176,9 @@
                 android:background="@drawable/capsuleboundary"
                 android:gravity="center|left"
                 android:orientation="vertical"
-                android:padding="@dimen/_10sdp">
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_10sdp"
+                android:padding="@dimen/_5sdp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -189,13 +193,13 @@
                         android:layout_marginTop="0dp"
                         android:src="@drawable/address_icon" />
 
-                    <TextView
+                    <EditText
                         android:id="@+id/Address"
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
                         android:background="@drawable/capsuleboundary"
-                        android:gravity="center"
-                        android:text="Address:"
+                        android:gravity="center|left"
+                        android:lines="2"
                         android:textColorHint="#6e6262" />
 
 
@@ -219,8 +223,9 @@
                         android:id="@+id/DetectAddress"
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
+                        android:lines="2"
                         android:background="@drawable/capsuleboundary"
-                        android:gravity="center"
+                        android:gravity="center|left"
                         android:text="Detect Address:"
                         android:textColorHint="#6e6262" />
                 </LinearLayout>
@@ -269,7 +274,7 @@
             android:layout_marginTop="10dp">
 
             <Button
-                android:id="@+id/btnChangePassword"
+                android:id="@+id/ChnagePassword"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
