--- a/app/src/main/res/layout/no_itemin_cart_layout.xml
+++ b/app/src/main/res/layout/no_itemin_cart_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/MessageView"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:gravity="center"
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="There is no item on cart"
+            android:text="There is no item in Store!!"
             android:textColor="#549e3b"
             android:textSize="18dp"
             android:textStyle="bold" />
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Please shop some products then \n come to cart."
+            android:text="Sorry!"
             android:textColor="#72b65b"
             android:textSize="16dp" />
 
